@@ -1,3 +1,9 @@
+2018-08-02         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* awkgram.y (yylex): Add lint warning upon encountering escaped
+	physical newlines in a string.
+	* node.c (make_str_node): Ditto.
+
 2018-07-31         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* interpret.h (unfield): Add a call to force_string() on
